# ruff-config-generator

./: CHANGELOG.md  NOTICE  README-DEV.MD  README.md  pyproject.toml
.config/: .editorconfig  .flake8  mypy.ini  pytest.ini  ruff.toml
.github/workflows/: execute.yml  pr-checker.yml
ruff_config_generator/: __main__.py  configuration.py  downloader.py  generator.py
src/ruff_config_generator/: app_config.py  configuration.py  default_config.toml  downloader.py  generator.py  main.py
tests/: test_dummy.py
tests/ruff_config_generator/: test_downloader.py  test_generator.py  test_main.py
workdir/: adjusted.toml  config.toml  config_adjusted.toml  default.toml  settings.html
