[tool.poetry]
name = "ruff-config-generator"
version = "0.1.0"
description = "Generates ruff default configuration"
authors = ["KRunchPL <krunchfrompoland@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/KRunchPL/ruff-config-generator"
repository = "https://github.com/KRunchPL/ruff-config-generator"
documentation = "https://github.com/KRunchPL/ruff-config-generator"
license = "Apache-2.0"
packages = [
    { include = "ruff_config_generator" },
]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"

[tool.poetry.group.dev.dependencies]
darglint = "^1.8.1"
flake8 = "^7.1.1"
ruff = "^0.8.0"
mypy = "~1.13.0"
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"
types-requests = "^2.32.0.20241016"
types-beautifulsoup4 = "^4.12.0.20241020"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
