[project]
name = "ruff-config-generator"
description = "Generates ruff configuration"
version = "1.0.0"
authors = [
    { name = "KRunchPL", email = "krunchfrompoland@gmail.com" },
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.14,<4"
dependencies = [
    "beautifulsoup4 ==4.14.2",
    "requests ==2.32.5",
]

[project.urls]
homepage = "https://github.com/KRunchPL/ruff-config-generator"
repository = "https://github.com/KRunchPL/ruff-config-generator"
documentation = "https://github.com/KRunchPL/ruff-config-generator"

[tool.hatch.build.targets.wheel]
packages = [
    "src/ruff_config_generator",
]

[dependency-groups]
dev = [
    "darglint",
    "flake8",
    "mypy",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "ruff",
    "types-beautifulsoup4 ==4.12.0.20250516",
    "types-requests ==2.32.4.20250913",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
